Fix post request on refresh issue. Make scroll bar appear when chat is too long.

--- a/gpt_chat_app/static/styles.css
+++ b/gpt_chat_app/static/styles.css
@@ -22,15 +22,14 @@ ul, ol {
 .content {
     width: 67%;
     margin: 0 auto;
-    background-color: green;
+    height: 100vh;
+    overflow: auto;
   }
 
 .response-content {
     margin: 0 auto;
-    background-color: red;
 }
 
 .message {
     margin: 0 auto;
-    background-color: blue;
 }
